--- a/client/package.json
+++ b/client/package.json
@@ -39,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "eslint-plugin-import": "^2.25.4"
   }
 }
